--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -1,5 +1,6 @@
 ---
-layout: layouts/html.njk
+layout: layouts/base.njk
+permalink: index.html
 relative_path: .
 ---
 <p>Katie Lin is a software designer and engineer. They enjoy kayaking and playing bass guitar. You can write to them here: <u>c.lin</u> (at) <u>mailbox.org</u></p>
