--- a/src/pages/countdown.njk
+++ b/src/pages/countdown.njk
@@ -1,6 +1,6 @@
 ---
-layout: layouts/html.njk
-relative_path: ../..
+layout: layouts/base.njk
+permalink: countdown/index.html
 ---
 <p id="countdown">As of <span id="now_d"></span> at <span id="now_t"></span>, there are
     <span id="d"></span> <span id="d_units"></span>,
