--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -18,7 +18,7 @@
             gap: 10px;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="{{relative_path}}/css/base.css">
+    <link rel="stylesheet" type="text/css" href="/css/base.css">
 </head>
 <body>
     {% include "partials/header.njk" %}
