add tracking script to base.njk, add eleventy ignore file, install tailwind

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://twelvefourseven.net{{page.url}}">
+    <link href="/assets/favicon.ico" rel="icon">
+    <script data-goatcounter="https://whitwaltman.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
     <title>twelvefourseven.net</title>
     <style>
         img {
