--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer>
+<footer class="mx-8 my-4">
     <p>
         <q>I am the infrastructure of the web. I am not content, nor am I a product. I am a human and a participant in this great work of humanity we call the internet.</q>
         <a href="https://thoughts.melonking.net/thoughts/every-site-needs-a-links-page-why-linking-matters">(Every site needs a Links Page)</a>
