--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,3 +1,3 @@
-<header>
-    <p><a href="/">twelvefourseven.net</a></p>
+<header class="mt-4 mb-8">
+    <p class="text-xl font-bold underline mt-2 mb-4 mx-8"><a href="/">twelvefourseven.net</a></p>
 </header>
