--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -24,7 +24,7 @@
     <script data-goatcounter="https://whitwaltman.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </head>
-<body class="bg-orange-500 text-black flex flex-col min-h-screen">
+<body class="bg-pink-300 text-black flex flex-col min-h-screen">
     {% include "partials/header.njk" %}
     <main class="flex-1 px-8">
         {% block content %}
