--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,6 +1,9 @@
 <footer class="mx-8 my-4">
-    <p>
-        <q>I am the infrastructure of the web. I am not content, nor am I a product. I am a human and a participant in this great work of humanity we call the internet.</q>
-        <a href="https://thoughts.melonking.net/thoughts/every-site-needs-a-links-page-why-linking-matters">(Every site needs a Links Page)</a>
-    </p>
+    <nav class="">
+        <a href="/blog">blog</a>
+        <a href="/links">links</a>
+        <a href="/notes">notes</a>
+        <a href="/explore">explore</a>
+        <a href="/colophon">colophon</a>
+    </nav>
 </footer>
