--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -2,28 +2,4 @@
 layout: layouts/base.njk
 permalink: index.html
 ---
-<p>Katie Lin is a software designer and engineer. They enjoy kayaking and playing bass guitar. You can write to them here: <u>c.lin</u> (at) <u>mailbox.org</u></p>
-<hr>
-<blockquote>
-    <p>
-        The chief trick to making good mistakes is not to hide them— especially not from yourself.
-        Instead of turning away in denial when you make a mistake, you should become a connoisseur
-        of your own mistakes, turning them over in your mind as if they were works of art, which in
-        a way they are.
-    </p>
-    <cite>Daniel Dennett, philosopher and cognitive scientist</cite>
-</blockquote>
-<div class="gallery">
-    <img src="https://katielin019.github.io/assets/electronic.jpeg">
-    <img src="https://katielin019.github.io/assets/face.jpeg">
-    <img src="https://katielin019.github.io/assets/also_me.jpeg">
-    <img src="https://katielin019.github.io/assets/desk.jpeg">
-    <img src="https://katielin019.github.io/assets/chicago.jpeg">
-    <img src="https://katielin019.github.io/assets/zoo.jpeg">
-    <img src="https://katielin019.github.io/assets/truth.JPG">
-    <img src="https://katielin019.github.io/assets/proto.JPG">
-</div>
-<blockquote>
-    <p>Do it now. The conditions are always impossible.</p>
-    <cite>Doris Lessing</cite>
-</blockquote>
+<p>Katie Lin is a software designer and engineer. They enjoy kayaking and playing bass guitar. You can write to them here: <code class="px-1 py-0.5 border-1 border-gray-400 border-solid">c.lin (at) mailbox.org</code></p>
