--- a/src/pages/style.njk
+++ b/src/pages/style.njk
@@ -12,12 +12,16 @@ permalink: style/index.html
     </p>
 </header>
 
-<h1>This is an h1 element</h1>
-<h2>This is an h2 element</h2>
-<h3>This is an h3 element</h3>
-<h4>This is an h4 element</h4>
-<h5>This is an h5 element</h5>
-<h6>This is an h6 element</h6>
+<section>
+    <h2>Header elements</h2>
+    <hr>
+    <h1>This is an h1 element</h1>
+    <h2>This is an h2 element</h2>
+    <h3>This is an h3 element</h3>
+    <h4>This is an h4 element</h4>
+    <h5>This is an h5 element</h5>
+    <h6>This is an h6 element</h6>
+</section>
 
 <section>
     <h2>This is a new section</h2>
@@ -88,5 +92,5 @@ permalink: style/index.html
             <p><cite>https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements#inline_text_semantics</cite></p>
         </li>
     </ol>
-    <p>test</p>
+    is this better
 </section>
