--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,41 +2,6 @@
 
 @layer base {
     a {
-        @apply underline;
-    }
-
-    h1 {
-        font-size: 2.5rem;
-        color: red;
-    }
-
-    h2 {
-        font-size: 2rem;
-        color: blue;
-    }
-
-    h3 {
-        font-size: 1.5rem;
-    }
-
-    h1, h2, h3 {
-        margin-top: 1em;
-        margin-bottom: 0.5em;
-    }
-
-    ul {
-        @apply list-disc list-outside pl-6;
-    }
-
-    ol {
-        @apply list-decimal list-outside pl-8;
-    }
-
-    li {
-        @apply pl-1.5 pb-0.5;
-    }
-
-    p {
-        @apply pb-1;
+        text-decoration: underline;
     }
 }
