trying to fix my dumb stylesheets

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -24,13 +24,15 @@
     <script data-goatcounter="https://whitwaltman.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </head>
-<body class="bg-zinc-800 text-white flex flex-col min-h-screen">
-    {% include "partials/header.njk" %}
-    <main class="flex-1 px-8">
-        {% block content %}
-            {{ content | safe }}
-        {% endblock %}
-    </main>
-    {% include "partials/footer.njk" %}
+<body class="bg-zinc-800 text-white flex flex-col max-w-screen min-h-screen overflow-x-hidden">
+    <div class="w-full max-w-screen-md mx-auto flex flex-col flex-1">
+        {% include "partials/header.njk" %}
+        <main class="flex-1 px-8">
+            {% block content %}
+                {{ content | safe }}
+            {% endblock %}
+        </main>
+        {% include "partials/footer.njk" %}
+    </div>
 </body>
 </html>
