--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer class="mx-8 my-4">
+<footer class="px-8 py-4">
     <nav class="">
         <a href="/blog">blog</a>
         <a href="/links">links</a>
