--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -2,4 +2,8 @@
 layout: layouts/base.njk
 permalink: index.html
 ---
-<p>Katie Lin is a software designer and engineer. They enjoy kayaking and playing bass guitar. You can write to them here: <code class="px-1 py-0.5 border-1 border-gray-400 border-solid">c.lin (at) mailbox.org</code></p>
+<p class="pb-4">
+    Katie Lin is a software designer and engineer.
+    They enjoy kayaking and playing bass guitar.
+    You can write to them here: <code>c.lin (at) mailbox.org</code>
+</p>
