refactoring prettier logic into script

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,9 +1,3 @@
 <footer class="px-8 py-4">
-    <nav class="">
-        <a href="/blog">blog</a>
-        <a href="/links">links</a>
-        <a href="/notes">notes</a>
-        <a href="/explore">explore</a>
-        <a href="/colophon">colophon</a>
-    </nav>
+    Beep boop
 </footer>
