--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -2,8 +2,12 @@
 layout: layouts/base.njk
 permalink: index.html
 ---
-<p class="pb-4">
-    Katie Lin is a software designer and engineer.
-    They enjoy kayaking and playing bass guitar.
-    You can write to them here: <code>c.lin (at) mailbox.org</code>
-</p>
+<section>
+    <p class="mb-8">
+        Katie Lin is a software designer and engineer. They enjoy kayaking and playing bass guitar.
+        You can write to them here:
+        <code class="px-1 py-0.5 text-sm border-1 border-gray-400 border-solid">
+        c.lin (at) mailbox.org</code>
+    </p>
+</section>
+<hr class="mb-8">
