--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,11 +1,12 @@
 {% set pageTitle = metadata.title %}
 
 {% if title %}
-    {% set pageTitle %}{{ title }} | {{ site.title }}{% endset %}
+{% set pageTitle %}{{ title }} | {{ site.title }}{% endset %}
 {% endif %}
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,18 +22,17 @@
     <meta property="og:title" content="{{ pageTitle }}">
     <meta name="description" content="{{ description or site.description }}">
 
-    <script data-goatcounter="https://whitwaltman.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+    <script data-goatcounter="https://whitwaltman.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
-<body class="bg-zinc-800 text-white flex flex-col max-w-screen min-h-screen overflow-x-hidden">
-    <div class="w-full max-w-screen-md mx-auto flex flex-col flex-1">
-        {% include "partials/header.njk" %}
-        <main class="flex-1 px-8">
-            {% block content %}
-                {{ content | safe }}
-            {% endblock %}
-        </main>
-        {% include "partials/footer.njk" %}
-    </div>
+
+<body class="bg-black text-white flex flex-col min-h-screen">
+    {% include "partials/header.njk" %}
+    <main class="flex-1 px-8">
+        {% block content %}
+        {{ content | safe }}
+        {% endblock %}
+    </main>
+    {% include "partials/footer.njk" %}
 </body>
+
 </html>
