finally fixed this stupid mf https://www.11ty.dev/docs/data-computed/

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -1,5 +1,5 @@
 {% extends "layouts/base.njk" %}
 {% block content %}
-    <h1 class="font-lg">{{ title }}</h1>
+    <h1 class="text-5xl">{{ title }}</h1>
     {{ content | safe }}
 {% endblock %}
