--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -1,5 +1,5 @@
 {% extends "layouts/base.njk" %}
 {% block content %}
-    <h1 class="text-5xl">{{ title }}</h1>
+    <h1 class="text-5xl text-gray-400 font-medium mb-8">{{ title }}</h1>
     {{ content | safe }}
 {% endblock %}
