--- a/src/pages/blog.njk
+++ b/src/pages/blog.njk
@@ -1,8 +1,27 @@
 ---
 title: blog
+pagination:
+    data: collections.blogPosts
+    size: 10
+    alias: posts
 ---
-This is my blog
+{# This is my blog
 
+<br>
 <hr>
+<br>
 
 {{ section }}
+
+<br>
+<hr>
+<br>
+
+{{ page | dump }} #}
+
+{% for p in posts %}
+    <section class="mb-4">
+        <h3><a href="{{ p.url }}" class="underline font-semibold">{{ p.data.title }}</a></h3>
+        <p>{{ p.content | safe }}</p>
+    </section>
+{% endfor %}
