--- a/src/pages/blog.njk
+++ b/src/pages/blog.njk
@@ -19,9 +19,13 @@ pagination:
 
 {{ page | dump }} #}
 
-{% for p in posts %}
+{% for post in posts %}
     <section class="mb-4">
-        <h3><a href="{{ p.url }}" class="underline font-semibold">{{ p.data.title }}</a></h3>
-        <p>{{ p.content | safe }}</p>
+        <h3><a href="{{ post.url }}" class="underline font-semibold">{{ post.data.title }}</a></h3>
+        <p>{{ post.page.excerpt }}</p>
+        <br>
+        <hr>
+        {{ post.page | dump }}
+        {# <p>{{ p.content | safe }}</p> #}
     </section>
 {% endfor %}
