--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,3 +1,5 @@
 <footer class="px-8 py-4">
-    Beep boop
+    <p class="tracking-wide font-normal font-stretch-condensed text-lime-400 mb-2">
+        Thanks for stopping by. Feel free to grab a <a class="underline" href="/links">link</a> on your way out.
+    </p>
 </footer>
