--- a/src/root/index.njk
+++ b/src/root/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-permalink: /
+permalink: index.html
 ---
 <section>
     <p class="mb-8">
@@ -9,5 +9,7 @@ permalink: /
         <code class="px-1 py-0.5 text-sm border-1 border-gray-400 border-solid">
         c.lin (at) mailbox.org</code>
     </p>
+    <br><br>
+    {{ page | dump }}
 </section>
 <hr class="mb-8">
