--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,6 +1,6 @@
 <footer class="px-8 py-4">
     <div class="tracking-wide font-normal font-stretch-condensed text-lime-400 flex flex-row justify-between">
-        <span>forever a work in progress.</span>
+        <span>forever a work in progress</span>
         <span>last build: {{ site.buildTime | formatBuildDate }}</span>
     </div>
 </footer>
