--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -2,9 +2,7 @@
     <a class="text-4xl tracking-wide font-normal font-stretch-condensed text-lime-400 px-1 mb-2 hover:underline"
         href="/index.html">twelvefourseven.net</a>
     <nav class="text-lg font-mono font-semibold flex gap-2.75 mt-1">
-        <a class="hover:text-rose-400 px-1 {{ 'text-rose-400' if section == 'blog' else '' }}" href="/blog">blog</a>
-        <a class="hover:text-indigo-400 px-1 {{ 'text-indigo-400' if section == 'links' else '' }}" href="/links">links</a>
-        <a class="hover:text-orange-400 px-1 {{ 'text-orange-400' if section == 'notes' else '' }}" href="/notes">notes</a>
-        <a class="hover:text-fuchsia-400 px-1 {{ 'text-fuchsia-400' if section == 'explore' else '' }}" href="/explore">explore</a>
+        <a class="hover:text-fuchsia-400 px-1 {{ 'text-fuchsia-400' if section == 'countdown' else '' }}" href="/countdown">countdown</a>
+        <p class="px-1">more to come soon...</p>
     </nav>
 </header>
