styling links page

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,7 +1,7 @@
-{% set pageTitle = metadata.title %}
-
 {% if title %}
 {% set pageTitle %}{{ title }} | {{ site.title }}{% endset %}
+{% else %}
+{% set pageTitle %}{{ site.title }}{% endset %}
 {% endif %}
 
 <!DOCTYPE html>
@@ -26,8 +26,6 @@
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:title" content="{{ pageTitle }}">
     <meta name="description" content="{{ description or site.description }}">
-
-    <script data-goatcounter="https://whitwaltman.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </head>
 
 <body class="bg-black text-white flex flex-col min-h-screen">
