--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,6 +1,6 @@
 <header class="px-8 pt-6 pb-12 flex flex-col justify-between items-baseline">
     <a class="text-4xl tracking-wide font-normal font-stretch-condensed text-lime-400 px-1 mb-2 hover:underline"
-        href="/index.html">twelvefourseven.net</a>
+        href="/">twelvefourseven.net</a>
     <nav class="text-lg font-mono font-semibold flex gap-2.75 mt-1">
         <a class="hover:text-orange-400 px-1 {{ 'text-orange-400' if section == 'about' else '' }}" href="/about">about</a>
         <a class="hover:text-indigo-400 px-1 {{ 'text-indigo-400' if section == 'links' else '' }}" href="/links">links</a>
