--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -2,12 +2,11 @@
 title: about
 date: Last Modified
 ---
-<span class="font-semibold">{{ site.title }}</span> is the weblog of Katie Lin.
-It's a mostly static site generated using {{ eleventy.generator }}.
+<span class="font-mono text-shadow-blue-400">{{ site.title }}</span> is the weblog of Katie Lin.
+It's a mostly static site that's generated using {{ eleventy.generator }}.
 Tailwind CSS and Nunjucks are used to modularize aspects of the code.
 
-<br>
-<br>
+<br><br>
 
 This website is being served to you via OpenBSD's httpd. If you'd like to set up your own website with it,
 <a class="underline" href="https://httpd.rocks/">httpd.rocks</a> is a great resource to start with.
