--- a/src/pages/countdown.njk
+++ b/src/pages/countdown.njk
@@ -1,5 +1,6 @@
 ---
 layout: layouts/base.njk
+description: Days until I'm back in Pittsburgh
 ---
 <p id="countdown">As of <span id="now_d"></span> at <span id="now_t"></span>, there are
     <span id="d"></span> <span id="d_units"></span>,
