--- a/src/pages/links.njk
+++ b/src/pages/links.njk
@@ -1,14 +1,17 @@
 ---
 title: links
+description: links 
 ---
 
 {% for link in links %}
     <section class="mb-4">
-        <p class="text-sm text-gray-400 float-right">{{ link.created | convertTimestamp }}</p>
-        <p class="mb-2"><a class="underline text-blue-300 hover:text-blue-500" href="{{ link.url }}">{{ link.title }}</a></p>
-        {% for excerpt in link.excerpts %}
-            <blockquote class="bg-gray-600 mb-2 p-1">{{ excerpt }}</blockquote>
-        {% endfor %}
+        <details class="rounded-lg border border-transparent p-6 open:border-gray-700/50 open:bg-gray-950/50">
+            <summary><p class="mb-2"><a class="underline text-blue-300 hover:text-blue-500" href="{{ link.url }}">{{ link.title }}</a></p></summary>
+            {% for excerpt in link.excerpts %}
+                <blockquote class="bg-gray-600 mb-2 p-1">{{ excerpt }}</blockquote>
+            {% endfor %}
+        </details> 
         <aside class="italic">{{ link.comment }}</aside>
+        <p class="text-sm text-gray-400">{{ link.created | convertTimestamp }}</p>
     </section>
 {% endfor %}
