--- a/src/pages/links.njk
+++ b/src/pages/links.njk
@@ -4,14 +4,11 @@ description: links
 ---
 
 {% for link in links %}
-    <section class="mb-2 flex-flex-row">
-        <details class="rounded-lg border border-transparent px-2 pb-4 open:border-gray-700/50 open:bg-gray-950/50">
-            <summary class="mb-2"><a class="underline text-blue-300 hover:text-blue-500" href="{{ link.url }}">{{ link.title }}</a></summary>
-            {% for excerpt in link.excerpts %}
-                <blockquote class="bg-gray-600 mb-2 p-1">{{ excerpt }}</blockquote>
-            {% endfor %}
-        </details> 
-        {# <aside class="italic">{{ link.comment }}</aside>
-        <p class="text-sm text-gray-400">{{ link.created | convertTimestamp }}</p> #}
-    </section>
+    <details class="rounded-lg border border-transparent p-2 mb-2 open:border-gray-700/50 open:bg-gray-950/50">
+        <summary class="mb-2"><a class="underline text-blue-300 hover:text-blue-500" href="{{ link.url }}">{{ link.title }}</a></summary>
+        <div>
+            <p class="italic pl-8">{{ link.comment }}</p>
+            <p class="text-sm text-gray-400 float-right">{{ link.created | convertTimestamp }}</p>
+        </div>
+    </details> 
 {% endfor %}
