--- a/src/root/index.njk
+++ b/src/root/index.njk
@@ -1,14 +1,11 @@
 ---
 layout: layouts/base.njk
 permalink: index.html
+date: Last Modified
 ---
-<section>
-    <p class="mb-8">
-        Katie Lin is a software designer and engineer. They enjoy kayaking and playing bass guitar.
-        You can write to them here:
-        <code class="px-1 py-0.5 text-sm border-1 border-gray-400 border-solid">
-        c.lin (at) mailbox.org</code>
-    </p>
-    <br><br>
-</section>
-<hr class="mb-8">
+<p class="mb-8">
+    Katie Lin is a software designer and engineer. They enjoy kayaking and playing bass guitar.
+    You can write to them here:
+    <code class="px-1 py-0.5 text-sm border-1 border-gray-400 border-solid">
+            c.lin (at) mailbox.org</code>
+</p>
