--- a/src/root/404.njk
+++ b/src/root/404.njk
@@ -4,4 +4,4 @@ permalink: 404/index.html
 title: 404
 ---
 <p class="text-2xl font-semibold mb-6">Oops, looks like this is a dead end. Sorry about that.</p>
-<p class="text-lg">If you think this was a mistake, you can <a class="underline" href="mailto:c.lin@mailbox.org">shoot me an email</a> and I'll try to take a look.</p>
+<p class="text-lg">If you think this was a mistake, you can <a class="underline" href="mailto:whitwaltman@mailbox.org?subject=404">shoot me an email</a> and I'll try to take a look.</p>
