--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,5 +1,5 @@
 <header class="px-8 pt-6 pb-12 flex flex-col justify-between items-baseline">
     <a class="text-4xl tracking-wide font-normal font-stretch-condensed text-lime-400 px-1 mb-2 hover:underline"
         href="/">twelvefourseven.net</a>
-    <p class="font-mono">A WEBLOG BY WHIT WALTMAN</p>
+    <p class="font-mono">a weblog by whit waltman</p>
 </header>
