add most recent post to index, create archive

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -3,6 +3,7 @@
         see my other pages:
         <a class="underline" href="/countdown">countdown</a>
         <a class="underline" href="/links">links</a>
+        <a class="underline" href="/archive">archive</a>
     </p>
     <p>
         questions? comments? fun facts? send em to whitwaltman at mailbox dot org
