--- a/src/pages/links.njk
+++ b/src/pages/links.njk
@@ -1,5 +1,6 @@
 ---
 title: links
+description: A bunch of links I like. Explore the vast, independent web!
 ---
 {% for link in links %}
     <div class="mb-4">
