--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,4 +4,16 @@
     main p {
         margin-bottom: 16px;
     }
+
+    a.ext-link {
+        @apply underline text-blue-400 hover:text-blue-600;
+    }
+
+    a.ext-link::after {
+        content: " \2197";
+    }
+
+    a.post-link {
+        @apply underline hover:bg-lime-100;
+    }
 }
