--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,4 +1,4 @@
-<header class="px-8 pt-6 pb-8 flex flex-col justify-between items-baseline">
+<header class="px-8 pt-6 pb-2 mb-6 flex flex-col justify-between items-baseline">
     <a class="text-4xl tracking-wide font-normal font-stretch-condensed text-lime-400 px-1 mb-2 hover:underline"
         href="/">twelvefourseven.net</a>
     <p class="font-mono">a weblog by whit waltman</p>
