--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,11 +1,11 @@
-<footer class="bg-lime-400 px-8 pt-6 pb-6">
-    <p>
-        see my other pages:
-        <a class="underline" href="/countdown">countdown</a>
-        <a class="underline" href="/links">links</a>
-        <a class="underline" href="/archive">archive</a>
+<footer class="text-sm bg-lime-400 px-8 pt-6 pb-6">
+    <p class="mb-1">
+        visit my other pages:
+        <a class="footer-link" href="/countdown">countdown</a>
+        <a class="footer-link" href="/links">links</a>
+        <a class="footer-link" href="/archive">archive</a>
     </p>
     <p>
-        questions? comments? fun facts? send em to whitwaltman at mailbox dot org
+        questions? comments? fun facts? send em to <span class="ml-1 font-mono">whitwaltman at mailbox dot org</span>
     </p>
 </footer>
