--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -30,7 +30,7 @@
 
 <body class="bg-white text-black flex flex-col min-h-screen">
     {% include "partials/header.njk" %}
-    <main class="flex-1 px-8 mb-24">
+    <main class="flex-1 px-8">
         {% block content %}
         {{ content | safe }}
         {% endblock %}
