--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer class="text-sm bg-lime-400 px-8 pt-6 pb-6">
+<footer class="text-sm px-4 pt-6 pb-6">
     <p class="mb-1">
         visit my other pages:
         <a class="footer-link" href="/countdown">countdown</a>
