--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,15 +9,24 @@
         @apply underline text-blue-500 hover:text-blue-700;
     }
 
-    a.ext-link::after {
-        content: " \2197";
-    }
-
     a.post-link {
         @apply underline hover:bg-lime-100;
     }
 
     a.footer-link {
-        @apply underline hover:bg-blue-100;
+        @apply underline hover:bg-black hover:text-lime-400;
+    }
+
+    code {
+        @apply bg-gray-200 p-0.5 border-1;
+    }
+
+    h3 {
+        @apply pb-0.5 text-xl font-semibold;
+    }
+
+    aside {
+        @apply bg-gray-200 text-sm;
+        @apply p-2 m-4;
     }
 }
