--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -37,6 +37,7 @@
 </head>
 
 <body class="bg-lime-400 text-black flex flex-col min-h-screen">
+    {# TODO: edit base style to improve readability (incl. responsive layout) #}
     {% include "partials/header.njk" %}
     <main class="bg-white flex-1 px-4">
         {% block content %}
