modify partials, layouts

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,10 +1,4 @@
-<header class="bg-white px-4 pt-6 pb-8 flex flex-row justify-between">
-    <div class="flex-col justify-between items-baseline">
-        <a class="text-3xl tracking-wide font-normal font-stretch-condensed text-lime-400 mb-2 hover:underline"
-        href="/">twelvefourseven.net</a>
-        <p class="font-mono">a weblog by whit waltman</p>
-    </div>
-    {# {% if section %}
-        <span class="text-xs">you are here: {{ section }}</span>
-    {% endif %} #}
+<header class="bg-white px-4 pt-6 pb-8 text-neutral-500">
+    <h1 class="text-3xl tracking-wide font-stretch-condensed font-medium hover:text-lime-400"><a href="/">twelvefourseven.net</a></h1>
+    <p class="font-mono">a weblog by whit waltman</p>
 </header>
