more visual edits

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -36,7 +36,7 @@
     <meta name="description" content="{{ pageDescription }}">
 </head>
 
-<body class="bg-lime-400 text-black flex flex-col min-h-screen">
+<body class="bg-neutral-800 text-black flex flex-col min-h-screen">
     {# TODO: edit base style to improve readability (incl. responsive layout) #}
     {% include "partials/header.njk" %}
     <main class="bg-white flex-1 px-4">
