--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,4 +1,4 @@
 <header class="bg-white px-4 pt-6 pb-8 text-neutral-500">
-    <h1 class="text-3xl tracking-wide font-stretch-condensed font-medium hover:text-lime-400"><a href="/">twelvefourseven.net</a></h1>
+    <h1 class="text-3xl tracking-wide font-stretch-condensed font-medium text-lime-400 hover:italic"><a href="/">twelvefourseven.net</a></h1>
     <p class="font-mono">a weblog by whit waltman</p>
 </header>
