--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,11 +1,21 @@
-<footer class="text-sm px-4 pt-6 pb-6">
-    <p class="mb-1">
-        visit my other pages:
+<footer class="px-4 pt-6 pb-6 text-neutral-600">
+    <section class="mt-12">
+        <h2 class="text-4xl font-semibold text-neutral-300 pb-4">Most recent posts</h2>
+        {% for post in collections.recent %}
+            <ul>
+                <li>
+                    <a href="{{ post.url }}">{{ post.data.title }}</a>
+                    <span>{{ post.date | formatPublishDate }}</span>
+                </li>
+            </ul>
+        {% endfor %}
+    </section>
+    <section>
+        <p>Visit my other pages:
         <a class="footer-link" href="/countdown">countdown</a>
-        <a class="footer-link" href="/links">links</a>
-        <a class="footer-link" href="/archive">archive</a>
-    </p>
-    <p>
-        questions? comments? fun facts? send em to <span class="ml-1 font-mono">whitwaltman at mailbox dot org</span>
-    </p>
+        <a class="footer-link" href="/links">links</a></p>
+        <p>
+            Questions? Comments? Fun facts? Send em to <span class="ml-1 font-mono">whitwaltman at mailbox dot org</span>
+        </p>
+    </section>
 </footer>
