--- a/src/root/index.njk
+++ b/src/root/index.njk
@@ -4,11 +4,9 @@ permalink: index.html
 section: home
 ---
 {% for post in collections.new %}
-<h1 class="text-3xl text-gray-400 font-medium mb-2">{{ post.data.title }}</h1>
-<p class="text-sm text-gray-600 font-normal mb-8">{{ post.date | formatPostDate }} <a class="post-link" href="{{ post.url }}">Link to this post</a></p>
-{{ post.templateContent | safe }}
+<article class="mb-20">
+    <h2 class="post-header">{{ post.data.title }}</h2>
+    <p class="text-sm text-gray-600 font-normal mb-8">{{ post.date | formatPostDate }} <a class="post-link" href="{{ post.url }}">Link to this post</a></p>
+    {{ post.templateContent | safe }}
+</article>
 {% endfor %}
-<div class="text-gray-400 mt-12 mb-8">
-    <hr class="mb-4">
-    <p>Looking for more? Try <a class="underline hover:bg-lime-200" href="/archive">the archive</a></p>
-</div>
