--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,4 +1,7 @@
-<header class="bg-white px-4 pt-6 pb-8 text-neutral-500">
-    <h1 class="text-3xl tracking-wide font-stretch-condensed font-medium text-lime-400 hover:italic"><a href="/">twelvefourseven.net</a></h1>
-    <p class="font-mono">a weblog by whit waltman</p>
+<header class="flex flex-row gap-2.5 bg-white p-2 px-3">
+    <span class="bg-lime-400 font-semibold text-black"><a href="/">Home</a></span>
+    <span>Blog</span>
+    <span>Links</span>
+    <span>Index</span>
+    <span>More</span>
 </header>
