--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,7 +1,7 @@
 {% if title %}
     {% set pageTitle %}{{ title }}{% endset %}
 {% else %}
-    {% set pageTitle %}{{ site.title }}{% endset %}
+    {% set pageTitle %}{{ metadata.title }}{% endset %}
 {% endif %}
 
 {% if page.excerpt %}
@@ -9,37 +9,32 @@
 {% elif page.description %}
     {% set pageDescription %}{{ page.description }}{% endset %}
 {% else %}
-    {% set pageDescription %}{{ site.description }}{% endset %}
+    {% set pageDescription %}{{ metadata.description }}{% endset %}
 {% endif %}
 
 <!DOCTYPE html>
-<html lang="{{ site.language }}">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="generator" content="{{ eleventy.generator }}">
-    {% if production %}
-        <title>{{ pageTitle }}</title>
-        <link href="/assets/favicon.ico" rel="icon">
-    {% else %}
-        <title>DEV - {{ pageTitle }}</title>
-        <link href="/assets/favicon-dev.ico" rel="icon">
-    {% endif %}
 
+    <title>{{ pageTitle }}</title>
+    <link href="/assets/favicon.ico" rel="icon">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link rel="canonical" href="{{ site.url }}{{ page.url }}">
+    <link rel="canonical" href="{{ metadata.url }}{{ page.url }}">
 
-    <meta property="og:site_name" content="{{ site.title }}">
-    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+    <meta property="og:site_name" content="{{ metadata.title }}">
+    <meta property="og:url" content="{{ metadata.url }}{{ page.url }}">
     <meta property="og:title" content="{{ pageTitle }}">
     <meta name="description" content="{{ pageDescription }}">
 </head>
 
-<body class="bg-neutral-800 text-black flex flex-col min-h-screen">
+<body class="bg-neutral-800 min-h-screen">
     {# TODO: edit base style to improve readability (incl. responsive layout) #}
     {% include "partials/header.njk" %}
-    <main class="bg-white flex-1 px-4">
+    <main class="min-h-screen bg-white px-4 pt-12">
         {% block content %}
         {{ content | safe }}
         {% endblock %}
