--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
 <footer class="h-fit p-4 text-gray-300">
-    <p>View past iterations of this website <a class="underline" href="/past">here</a>.</p>
-    <p>Questions? Comments? Fun facts? Send to: whitwaltman at mailbox dot org</p>
+    <p>Questions? Comments? Fun facts? Send them to: <span class="border-1 border-gray-500 px-0.25">whitwaltman at mailbox dot org</span></p>
+    <p class="text-gray-500">Thanks for stopping by :^)</p>
 </footer>
