--- a/src/pages/links.njk
+++ b/src/pages/links.njk
@@ -1,6 +1,7 @@
 ---
 title: links
 description: A bunch of links I like. Explore the vast, independent web!
+section: links
 ---
 {% for link in links %}
     <div class="mb-4">
