--- a/pages/links.njk
+++ b/pages/links.njk
@@ -3,6 +3,10 @@ title: links
 description: A bunch of links I like. Explore the vast, independent web!
 section: links
 ---
+<p>
+Links are the lifeblood of the web, and linking to other sites is a declaration of independence. —<a href="https://thoughts.melonking.net/thoughts/every-site-needs-a-links-page-why-linking-matters">
+    Every site needs a Links Page / Why linking matters
+</a></p>
 {% for link in links %}
     <div class="mb-4">
         <div class="flex flex-col md:flex-row justify-between">
