--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,7 @@
 <footer class="h-fit p-4 text-gray-300">
     <p>Questions? Comments? Fun facts? Send them to: <span class="border-1 border-gray-500 px-0.25">whitwaltman at mailbox dot org</span></p>
-    <p class="text-gray-500">Thanks for stopping by :^)</p>
+    <div class="flex flex-row justify-between text-gray-500">
+        <p>Thanks for stopping by :^)</p>
+        <p>Last build: {{ metadata.buildTime | formatBuildDate }}</p>
+    </div>
 </footer>
