--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,7 +1,7 @@
 <footer class="h-fit p-4 text-gray-300">
-    <p>Questions? Comments? Fun facts? Send them to: <span class="border-1 border-gray-500 px-0.25">whitwaltman at mailbox dot org</span></p>
-    <div class="flex flex-row justify-between text-gray-500">
+    <p>Questions? Comments? Fun facts? Send 'em to: <span class="border-1 border-gray-500 px-0.25">whitwaltman at mailbox dot org</span></p>
+    <div class="flex flex-row justify-between text-lime-400">
         <p>Thanks for stopping by :^)</p>
-        <p>Last build: {{ metadata.buildTime | formatBuildDate }}</p>
+        <p class="text-gray-500">Last build: {{ metadata.buildTime | formatBuildDate }}</p>
     </div>
 </footer>
